@@ -30,7 +30,8 @@ image::https://raw.githubusercontent.com/apache/tinkerpop/master/docs/static/ima
 * Added `maxWaitForClose` configuration option to the Java driver.
 * Deprecated `maxWaitForSessionClose` in the Java driver.
 * Bumped to Jackson 2.9.10.3.
-* Remove invalid service descriptors from gremlin-shaded
+* Remove invalid service descriptors from gremlin-shaded.
+* Fixed bug in Python traversal `clone()` where deep copies of bytecode were not occurring.
 
 [[release-3-3-10]]
 === TinkerPop 3.3.10 (Release Date: February 3, 2020)
